--- a/packages/lib-sdssynth/samples/detailed_example.ipynb
+++ b/packages/lib-sdssynth/samples/detailed_example.ipynb
@@ -7,11 +7,11 @@
     "# DP Aggregate Seeded Synthesizer\n",
     "DP Aggregate Seeded synthesizer is a differentially private synthesizer that relies on DP Marginals to build synthetic data. It will compute DP Marginals (called aggregates) for your dataset using an specified `reporting length`, and synthesize data based on the computed aggregated counts.\n",
     "\n",
-    "> The `reporting length` is the maximum combination length that aggregates are going to be computed for.\n",
+    "> Aggregates will be computed for all lengths of attribute combination up to and including the `reporting length`.\n",
     "\n",
     "## 1. Overview\n",
     "\n",
-    "### 1.1. Aggregated data generation with DP\n",
+    "### 1.1. Aggregate data generation with DP\n",
     "Let's consider the following input as example:\n",
     "\n",
     "| A | B | C |\n",
@@ -24,9 +24,9 @@
     "\n",
     "The input data is assumed to be categorical and the domain will be inferred from the input dataset:\n",
     "\n",
-    "- `A` possible values are - `a1,a2`\n",
-    "- `B` possible values are - `b1,b2`\n",
-    "- `C` possible values are - `c1,c2`\n",
+    "- `A` possible values are `a1,a2`\n",
+    "- `B` possible values are `b1,b2`\n",
+    "- `C` possible values are `c1,c2`\n",
     "\n",
     "For a `reporting length=2`, the aggregates in the dataset above could be:\n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "Also, some spurious combinations might be created and reported to ensure differentially private guarantees - notice that `B:b2;C:c2` does not exist in the sensitive dataset, but it has been _fabricated_ and added to the output.\n",
     "\n",
-    "Following the same lines, some attribute combinations might be suppressed - even though `A:a2;C:c1` exists in the sensitive dataset, it has not been reported as an aggregate.\n",
+    "Similarly, some attribute combinations might be suppressed. For example, even though `A:a2;C:c1` exists in the sensitive dataset, it has not been reported as an aggregate.\n",
     "\n",
     "### 1.2. Synthesis\n",
     "Data will be then synthesized directly from the aggregates computed with differential privacy to produce synthetic data. Which will ensure the same DP guarantees to the synthetic data."
@@ -95,7 +95,7 @@
     "\n",
     "> `gen_dataset` is just an utility to generate some example data (the code for it is in [`utils.py`](./utils.py))\n",
     "\n",
-    "To exemplify the library, let's create an example data frame that will be used to later on."
+    "To illustrate the library, let's start by creating an example data frame:"
    ]
   },
   {
@@ -323,9 +323,9 @@
     "\n",
     "### 4.1. Creation from constructor\n",
     "\n",
-    "The library uses an internal representation of the data to optimize the execution time complexity.\n",
+    "The library uses an internal representation of the data to optimize execution time complexity.\n",
     "\n",
-    "To create a dataset you can directly call the construction if the data in the raw format:"
+    "If the data is already in the required raw format, you can call the constructor directly:"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "metadata": {},
    "source": [
     "### 4.3. Creating sensitive dataset from a pandas data frame\n",
-    "For convenience a method is provided to build a dataset from a pandas data frame:"
+    "For convenience, a method is provided to build a dataset from a pandas data frame:"
    ]
   },
   {
@@ -446,9 +446,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although, this might not produce the optimized output for your dataset.\n",
+    "However, this might not produce the optimal output for your dataset and downstream analysis tasks.\n",
     "\n",
-    "To tune the synthesizer parameters we provide a builder (`DpAggregateSeededParametersBuilder`), where only the desired parameters can be provided and to have its default value updated:"
+    "To tune the synthesizer parameters, we provide a builder (`DpAggregateSeededParametersBuilder`). Any parameters passed to the builder will override the default values accordingly:"
    ]
   },
   {
@@ -751,7 +751,7 @@
     "synth.fit(sensitive_dataset)\n",
     "\n",
     "# here if we do not specify the desired number of samples, the synthesizer will\n",
-    "# use all the available attributes based in the 1-counts to synthesize records\n",
+    "# use all the available attributes based on the 1-counts to synthesize records\n",
     "synthetic_raw_data = synth.sample(len(sensitive_df))\n",
     "synthetic_dataset = Dataset(synthetic_raw_data)\n",
     "\n",
@@ -764,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Generating/exporting aggregated data"
+    "## 6. Generating/exporting aggregate data"
    ]
   },
   {
@@ -820,9 +820,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Evaluate DP aggregates and Synthetic data\n",
+    "## 7. Evaluate DP aggregates and DP synthetic data\n",
     "\n",
-    "This section is an example evaluation of both the DP aggregates and the Synthetic data, as well as the influence of some synthesizer parameters in the DP aggregates and synthetic data."
+    "This section is an example evaluation of both the DP aggregates and the DP synthetic data, as well as the influence of some synthesizer parameters in the DP aggregates and synthetic data."
    ]
   },
   {
@@ -957,7 +957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sensitive x Synthetic Data**"
+    "**Sensitive Data vs. DP Synthetic Data**"
    ]
   },
   {
@@ -1316,7 +1316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sensitive x DP Aggregates**"
+    "**Sensitive Data vs. DP Aggregates**"
    ]
   },
   {
@@ -1413,7 +1413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sensitive x Synthetic Data**"
+    "**Sensitive Data vs. DP Synthetic Data**"
    ]
   },
   {
@@ -1773,7 +1773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sensitive x DP Aggregates**"
+    "**Sensitive Data vs. DP Aggregates**"
    ]
   },
   {
@@ -1870,7 +1870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sensitive x Synthetic Data**"
+    "**Sensitive Data vs. DP Synthetic Data**"
    ]
   },
   {
