sdssynth notebooks language updates

--- a/packages/lib-sdssynth/samples/short_example.ipynb
+++ b/packages/lib-sdssynth/samples/short_example.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating/exporting aggregated data"
+    "## Generating/exporting aggregate data"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate"
+    "## Evaluating"
    ]
   },
   {
@@ -170,28 +170,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.985500</td>\n",
-       "      <td>2.636333</td>\n",
-       "      <td>4.579667</td>\n",
-       "      <td>0.498833</td>\n",
-       "      <td>0.492500</td>\n",
-       "      <td>0.497500</td>\n",
-       "      <td>0.501667</td>\n",
-       "      <td>0.487833</td>\n",
-       "      <td>0.501000</td>\n",
+       "      <td>0.993167</td>\n",
+       "      <td>2.616000</td>\n",
+       "      <td>4.578833</td>\n",
+       "      <td>0.492833</td>\n",
+       "      <td>0.504167</td>\n",
+       "      <td>0.497333</td>\n",
+       "      <td>0.499333</td>\n",
+       "      <td>0.510000</td>\n",
+       "      <td>0.494667</td>\n",
        "      <td>0.494833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.817966</td>\n",
-       "      <td>2.121202</td>\n",
-       "      <td>3.312474</td>\n",
-       "      <td>0.500040</td>\n",
-       "      <td>0.499985</td>\n",
+       "      <td>0.815821</td>\n",
+       "      <td>2.111624</td>\n",
+       "      <td>3.327656</td>\n",
+       "      <td>0.499990</td>\n",
+       "      <td>0.500024</td>\n",
        "      <td>0.500035</td>\n",
-       "      <td>0.500039</td>\n",
-       "      <td>0.499894</td>\n",
        "      <td>0.500041</td>\n",
+       "      <td>0.499942</td>\n",
+       "      <td>0.500013</td>\n",
        "      <td>0.500015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -210,8 +210,8 @@
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.750000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -223,20 +223,20 @@
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>2.500000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -266,21 +266,21 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.985500     2.636333     4.579667     0.498833     0.492500   \n",
-       "std       0.817966     2.121202     3.312474     0.500040     0.499985   \n",
+       "mean      0.993167     2.616000     4.578833     0.492833     0.504167   \n",
+       "std       0.815821     2.111624     3.327656     0.499990     0.500024   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     1.000000     2.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     5.000000     0.000000     0.000000   \n",
-       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
+       "25%       0.000000     0.000000     1.750000     0.000000     0.000000   \n",
+       "50%       1.000000     2.500000     5.000000     0.000000     1.000000   \n",
+       "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.497500     0.501667     0.487833     0.501000     0.494833  \n",
-       "std       0.500035     0.500039     0.499894     0.500041     0.500015  \n",
+       "mean      0.497333     0.499333     0.510000     0.494667     0.494833  \n",
+       "std       0.500035     0.500041     0.499942     0.500013     0.500015  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       0.000000     1.000000     0.000000     1.000000     0.000000  \n",
+       "50%       0.000000     0.000000     1.000000     0.000000     0.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
@@ -348,29 +348,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.920333</td>\n",
-       "      <td>2.285000</td>\n",
-       "      <td>3.963333</td>\n",
-       "      <td>0.475500</td>\n",
-       "      <td>0.477500</td>\n",
-       "      <td>0.493833</td>\n",
-       "      <td>0.489333</td>\n",
-       "      <td>0.484000</td>\n",
-       "      <td>0.482333</td>\n",
-       "      <td>0.493500</td>\n",
+       "      <td>0.911667</td>\n",
+       "      <td>2.323667</td>\n",
+       "      <td>3.896333</td>\n",
+       "      <td>0.475833</td>\n",
+       "      <td>0.494667</td>\n",
+       "      <td>0.478333</td>\n",
+       "      <td>0.464333</td>\n",
+       "      <td>0.485833</td>\n",
+       "      <td>0.481333</td>\n",
+       "      <td>0.483333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.833728</td>\n",
-       "      <td>2.175752</td>\n",
-       "      <td>3.480087</td>\n",
-       "      <td>0.499441</td>\n",
-       "      <td>0.499535</td>\n",
-       "      <td>0.500004</td>\n",
-       "      <td>0.499928</td>\n",
-       "      <td>0.499786</td>\n",
-       "      <td>0.499729</td>\n",
-       "      <td>0.499999</td>\n",
+       "      <td>0.832654</td>\n",
+       "      <td>2.144296</td>\n",
+       "      <td>3.487398</td>\n",
+       "      <td>0.499457</td>\n",
+       "      <td>0.500013</td>\n",
+       "      <td>0.499572</td>\n",
+       "      <td>0.498768</td>\n",
+       "      <td>0.499841</td>\n",
+       "      <td>0.499693</td>\n",
+       "      <td>0.499764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -402,7 +402,7 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -444,18 +444,18 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.920333     2.285000     3.963333     0.475500     0.477500   \n",
-       "std       0.833728     2.175752     3.480087     0.499441     0.499535   \n",
+       "mean      0.911667     2.323667     3.896333     0.475833     0.494667   \n",
+       "std       0.832654     2.144296     3.487398     0.499457     0.500013   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
        "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.493833     0.489333     0.484000     0.482333     0.493500  \n",
-       "std       0.500004     0.499928     0.499786     0.499729     0.499999  \n",
+       "mean      0.478333     0.464333     0.485833     0.481333     0.483333  \n",
+       "std       0.499572     0.498768     0.499841     0.499693     0.499764  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
