adding get_dp_number_of_records to synthesizer interface

--- a/packages/lib-sdssynth/samples/short_example.ipynb
+++ b/packages/lib-sdssynth/samples/short_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "\n",
     "synth.fit(sensitive_dataset)\n",
     "\n",
-    "synthetic_raw_data = synth.sample(len(sensitive_df))\n",
+    "synthetic_raw_data = synth.sample(synth.get_dp_number_of_records())\n",
     "synthetic_dataset = Dataset(synthetic_raw_data)\n",
     "\n",
     "synthetic_df = Dataset.raw_data_to_data_frame(synthetic_raw_data)"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -170,29 +170,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.993167</td>\n",
-       "      <td>2.616000</td>\n",
-       "      <td>4.578833</td>\n",
-       "      <td>0.492833</td>\n",
-       "      <td>0.504167</td>\n",
-       "      <td>0.497333</td>\n",
-       "      <td>0.499333</td>\n",
-       "      <td>0.510000</td>\n",
-       "      <td>0.494667</td>\n",
-       "      <td>0.494833</td>\n",
+       "      <td>1.008167</td>\n",
+       "      <td>2.631000</td>\n",
+       "      <td>4.590833</td>\n",
+       "      <td>0.511667</td>\n",
+       "      <td>0.510500</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.496167</td>\n",
+       "      <td>0.496500</td>\n",
+       "      <td>0.498500</td>\n",
+       "      <td>0.496333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.815821</td>\n",
-       "      <td>2.111624</td>\n",
-       "      <td>3.327656</td>\n",
-       "      <td>0.499990</td>\n",
-       "      <td>0.500024</td>\n",
-       "      <td>0.500035</td>\n",
-       "      <td>0.500041</td>\n",
-       "      <td>0.499942</td>\n",
-       "      <td>0.500013</td>\n",
-       "      <td>0.500015</td>\n",
+       "      <td>0.816626</td>\n",
+       "      <td>2.112167</td>\n",
+       "      <td>3.340800</td>\n",
+       "      <td>0.499906</td>\n",
+       "      <td>0.499931</td>\n",
+       "      <td>0.500042</td>\n",
+       "      <td>0.500027</td>\n",
+       "      <td>0.500029</td>\n",
+       "      <td>0.500039</td>\n",
+       "      <td>0.500028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -210,8 +210,8 @@
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.750000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -223,21 +223,21 @@
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -266,26 +266,26 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.993167     2.616000     4.578833     0.492833     0.504167   \n",
-       "std       0.815821     2.111624     3.327656     0.499990     0.500024   \n",
+       "mean      1.008167     2.631000     4.590833     0.511667     0.510500   \n",
+       "std       0.816626     2.112167     3.340800     0.499906     0.499931   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     0.000000     1.750000     0.000000     0.000000   \n",
-       "50%       1.000000     2.500000     5.000000     0.000000     1.000000   \n",
-       "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
+       "25%       0.000000     1.000000     2.000000     0.000000     0.000000   \n",
+       "50%       1.000000     3.000000     4.000000     1.000000     1.000000   \n",
+       "75%       2.000000     5.000000     8.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.497333     0.499333     0.510000     0.494667     0.494833  \n",
-       "std       0.500035     0.500041     0.499942     0.500013     0.500015  \n",
+       "mean      0.500000     0.496167     0.496500     0.498500     0.496333  \n",
+       "std       0.500042     0.500027     0.500029     0.500039     0.500028  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       0.000000     0.000000     1.000000     0.000000     0.000000  \n",
+       "50%       0.500000     0.000000     0.000000     0.000000     0.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -335,42 +335,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
+       "      <td>6024.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.911667</td>\n",
-       "      <td>2.323667</td>\n",
-       "      <td>3.896333</td>\n",
-       "      <td>0.475833</td>\n",
-       "      <td>0.494667</td>\n",
-       "      <td>0.478333</td>\n",
-       "      <td>0.464333</td>\n",
-       "      <td>0.485833</td>\n",
-       "      <td>0.481333</td>\n",
-       "      <td>0.483333</td>\n",
+       "      <td>0.921647</td>\n",
+       "      <td>2.335159</td>\n",
+       "      <td>4.047643</td>\n",
+       "      <td>0.495684</td>\n",
+       "      <td>0.481740</td>\n",
+       "      <td>0.475100</td>\n",
+       "      <td>0.482404</td>\n",
+       "      <td>0.469788</td>\n",
+       "      <td>0.482902</td>\n",
+       "      <td>0.483898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.832654</td>\n",
-       "      <td>2.144296</td>\n",
-       "      <td>3.487398</td>\n",
-       "      <td>0.499457</td>\n",
-       "      <td>0.500013</td>\n",
-       "      <td>0.499572</td>\n",
-       "      <td>0.498768</td>\n",
-       "      <td>0.499841</td>\n",
-       "      <td>0.499693</td>\n",
-       "      <td>0.499764</td>\n",
+       "      <td>0.827974</td>\n",
+       "      <td>2.155591</td>\n",
+       "      <td>3.490394</td>\n",
+       "      <td>0.500023</td>\n",
+       "      <td>0.499708</td>\n",
+       "      <td>0.499421</td>\n",
+       "      <td>0.499732</td>\n",
+       "      <td>0.499128</td>\n",
+       "      <td>0.499749</td>\n",
+       "      <td>0.499782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -402,7 +402,7 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -443,19 +443,19 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.911667     2.323667     3.896333     0.475833     0.494667   \n",
-       "std       0.832654     2.144296     3.487398     0.499457     0.500013   \n",
+       "count  6024.000000  6024.000000  6024.000000  6024.000000  6024.000000   \n",
+       "mean      0.921647     2.335159     4.047643     0.495684     0.481740   \n",
+       "std       0.827974     2.155591     3.490394     0.500023     0.499708   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
        "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
-       "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.478333     0.464333     0.485833     0.481333     0.483333  \n",
-       "std       0.499572     0.498768     0.499841     0.499693     0.499764  \n",
+       "count  6024.000000  6024.000000  6024.000000  6024.000000  6024.000000  \n",
+       "mean      0.475100     0.482404     0.469788     0.482902     0.483898  \n",
+       "std       0.499421     0.499732     0.499128     0.499749     0.499782  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
@@ -463,7 +463,7 @@
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
