--- a/packages/lib-accusynth/samples/short_example.ipynb
+++ b/packages/lib-accusynth/samples/short_example.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from sdssynth import init_logger, set_number_of_threads\n",
-    "from sdssynth import Dataset\n",
-    "from sdssynth import DpAggregateSeededParametersBuilder, AccuracyMode, FabricationMode\n",
-    "from sdssynth import DpAggregatedSeededSynthesizer, Dataset\n",
+    "from accusynth import init_logger, set_number_of_threads\n",
+    "from accusynth import Dataset\n",
+    "from accusynth import DpAggregateSeededParametersBuilder, AccuracyMode, FabricationMode\n",
+    "from accusynth import DpAggregatedSeededSynthesizer, Dataset\n",
     "\n",
     "from utils import gen_dataset"
    ]
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -170,29 +170,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.012500</td>\n",
-       "      <td>2.599167</td>\n",
-       "      <td>4.537500</td>\n",
-       "      <td>0.503000</td>\n",
-       "      <td>0.500333</td>\n",
-       "      <td>0.506500</td>\n",
-       "      <td>0.504667</td>\n",
-       "      <td>0.514333</td>\n",
-       "      <td>0.502667</td>\n",
-       "      <td>0.499833</td>\n",
+       "      <td>0.979000</td>\n",
+       "      <td>2.631333</td>\n",
+       "      <td>4.622833</td>\n",
+       "      <td>0.487167</td>\n",
+       "      <td>0.491500</td>\n",
+       "      <td>0.509167</td>\n",
+       "      <td>0.495333</td>\n",
+       "      <td>0.498333</td>\n",
+       "      <td>0.499000</td>\n",
+       "      <td>0.502833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.817999</td>\n",
-       "      <td>2.117998</td>\n",
-       "      <td>3.335733</td>\n",
-       "      <td>0.500033</td>\n",
-       "      <td>0.500042</td>\n",
-       "      <td>0.499999</td>\n",
+       "      <td>0.816703</td>\n",
+       "      <td>2.117191</td>\n",
+       "      <td>3.286748</td>\n",
+       "      <td>0.499877</td>\n",
+       "      <td>0.499969</td>\n",
+       "      <td>0.499958</td>\n",
        "      <td>0.500020</td>\n",
-       "      <td>0.499836</td>\n",
-       "      <td>0.500035</td>\n",
-       "      <td>0.500042</td>\n",
+       "      <td>0.500039</td>\n",
+       "      <td>0.500041</td>\n",
+       "      <td>0.500034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -210,8 +210,8 @@
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -223,20 +223,20 @@
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -266,26 +266,26 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      1.012500     2.599167     4.537500     0.503000     0.500333   \n",
-       "std       0.817999     2.117998     3.335733     0.500033     0.500042   \n",
+       "mean      0.979000     2.631333     4.622833     0.487167     0.491500   \n",
+       "std       0.816703     2.117191     3.286748     0.499877     0.499969   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     0.000000     1.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     1.000000     1.000000   \n",
-       "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
+       "25%       0.000000     1.000000     2.000000     0.000000     0.000000   \n",
+       "50%       1.000000     3.000000     5.000000     0.000000     0.000000   \n",
+       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.506500     0.504667     0.514333     0.502667     0.499833  \n",
-       "std       0.499999     0.500020     0.499836     0.500035     0.500042  \n",
+       "mean      0.509167     0.495333     0.498333     0.499000     0.502833  \n",
+       "std       0.499958     0.500020     0.500039     0.500041     0.500034  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       1.000000     1.000000     1.000000     1.000000     0.000000  \n",
+       "50%       1.000000     0.000000     0.000000     0.000000     1.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -335,42 +335,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
-       "      <td>6003.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
+       "      <td>6007.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.913043</td>\n",
-       "      <td>2.156755</td>\n",
-       "      <td>3.909545</td>\n",
-       "      <td>0.489255</td>\n",
-       "      <td>0.488089</td>\n",
-       "      <td>0.492754</td>\n",
-       "      <td>0.478094</td>\n",
-       "      <td>0.481759</td>\n",
-       "      <td>0.489755</td>\n",
-       "      <td>0.479427</td>\n",
+       "      <td>0.909273</td>\n",
+       "      <td>2.310638</td>\n",
+       "      <td>3.982354</td>\n",
+       "      <td>0.463792</td>\n",
+       "      <td>0.471949</td>\n",
+       "      <td>0.493591</td>\n",
+       "      <td>0.476611</td>\n",
+       "      <td>0.486599</td>\n",
+       "      <td>0.483769</td>\n",
+       "      <td>0.491926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.832789</td>\n",
-       "      <td>2.159173</td>\n",
-       "      <td>3.476390</td>\n",
-       "      <td>0.499926</td>\n",
-       "      <td>0.499900</td>\n",
-       "      <td>0.499989</td>\n",
-       "      <td>0.499562</td>\n",
-       "      <td>0.499709</td>\n",
-       "      <td>0.499937</td>\n",
-       "      <td>0.499618</td>\n",
+       "      <td>0.824568</td>\n",
+       "      <td>2.174089</td>\n",
+       "      <td>3.463288</td>\n",
+       "      <td>0.498729</td>\n",
+       "      <td>0.499254</td>\n",
+       "      <td>0.500001</td>\n",
+       "      <td>0.499494</td>\n",
+       "      <td>0.499862</td>\n",
+       "      <td>0.499778</td>\n",
+       "      <td>0.499976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -402,7 +402,7 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -443,19 +443,19 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6003.000000  6003.000000  6003.000000  6003.000000  6003.000000   \n",
-       "mean      0.913043     2.156755     3.909545     0.489255     0.488089   \n",
-       "std       0.832789     2.159173     3.476390     0.499926     0.499900   \n",
+       "count  6007.000000  6007.000000  6007.000000  6007.000000  6007.000000   \n",
+       "mean      0.909273     2.310638     3.982354     0.463792     0.471949   \n",
+       "std       0.824568     2.174089     3.463288     0.498729     0.499254   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
        "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
-       "count  6003.000000  6003.000000  6003.000000  6003.000000  6003.000000  \n",
-       "mean      0.492754     0.478094     0.481759     0.489755     0.479427  \n",
-       "std       0.499989     0.499562     0.499709     0.499937     0.499618  \n",
+       "count  6007.000000  6007.000000  6007.000000  6007.000000  6007.000000  \n",
+       "mean      0.493591     0.476611     0.486599     0.483769     0.491926  \n",
+       "std       0.500001     0.499494     0.499862     0.499778     0.499976  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
@@ -463,7 +463,7 @@
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
